--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
 
 body{
   background-image:url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
 }
 
 
