--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,7 @@ body{
   background-image: url('../img/abt-bg-2.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 
 }
 
